--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,6 @@
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets\css\style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
@@ -12,21 +11,113 @@
 
 <body>
     <header>
-        <ul class="nav nav-tabs">
-            <li class="nav-item">
-                <a class="nav-link active" href="#">Active</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link active" href="index.html">About</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="portfolio.html">Portfolio</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
-            </li>
-        </ul>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand bg-info text-white" href="index.html">
+                <h1 class="display-6">Brandon Bowen</h1>
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+                aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarText">
+                <ul class="navbar-nav mr-auto">
+                </ul>
+                <span class="navbar-text">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="index.html">About
+                                <span class="sr-only">(current)
+                                </span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="portfolio.html">Portfolio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contact.html">Contact</a>
+                        </li>
+                    </ul>
+                </span>
+            </div>
+        </nav>
     </header>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-4">
+                <div class="page-header text-info">
+                    <h1>Portfolio</h1>
+                </div>
+            </div>
+            <div class="col-sm-4">
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-sm-4">
+                <div class="card" style="width: 316px;">
+                    <img src="assets\images\art1.jpg" style="width: 316px; height: 316px;" class="card-img-top"
+                        alt="Project 1">
+                    <div class="card-body">
+                        <h5 class="card-title bg-info text-white text-center">Project 1</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="card" style="width: 316px;">
+                    <img src="assets\images\Drudkh_-_Autumn_Aurora.jpg" style="width: 316px; height: 316px;"
+                        class="card-img-top" alt="Project 2">
+                    <div class="card-body">
+                        <h5 class="card-title bg-info text-white text-center">Project 2</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="col-sm-4">
+                <div class="card" style="width: 316px;">
+                    <img src="assets\images\art2.jpg" style="width: 316px; height: 316px;" class="card-img-top"
+                        alt="Project 3">
+                    <div class="card-body">
+                        <h5 class="card-title bg-info text-white text-center">Project 3</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="card" style="width: 316px;">
+                    <img src="assets\images\art3.jpg" style="width: 316px; height: 316px;" class="card-img-top"
+                        alt="Project 4">
+                    <div class="card-body">
+                        <h5 class="card-title bg-info text-white text-center">Project 4</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="col-sm-4">
+                <div class="card" style="width: 316px;">
+                    <img src="assets\images\drukh2.jpg" style="width: 316px; height: 316px;" class="card-img-top"
+                        alt="Project 5">
+                    <div class="card-body">
+                        <h5 class="card-title bg-info text-white text-center">Project 5</h5>
+                    </div>
+                </div>
+            </div>
+
+            <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+                integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+                crossorigin="anonymous">
+            </script>
+            <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+                integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+                crossorigin="anonymous">
+            </script>
+            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+                integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+                crossorigin="anonymous">
+            </script>
 </body>
 
 </html>
