Made all containers and images fluid. Integrated some aspects of original CSS file to make it look more like the original portfolio. Added links to Project cards. General cleaning up odds and ends.

--- a/portfolio.html
+++ b/portfolio.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" href="assets\css\style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <meta charset="UTF-8">
@@ -42,11 +43,11 @@
         </nav>
     </header>
 
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
             <div class="col-sm-4">
                 <div class="page-header text-info">
-                    <h1>Portfolio</h1>
+                    <h2>Portfolio</h2>
                 </div>
             </div>
             <div class="col-sm-4">
@@ -59,7 +60,9 @@
                     <img src="assets\images\art1.jpg" style="width: 316px; height: 316px;" class="card-img-top"
                         alt="Project 1">
                     <div class="card-body">
-                        <h5 class="card-title bg-info text-white text-center">Project 1</h5>
+                        <h5 class="card-title bg-info text-white text-center"><a href="#"
+                                class="card-link text-white">Project
+                                1</a></h5>
                     </div>
                 </div>
             </div>
@@ -68,7 +71,8 @@
                     <img src="assets\images\Drudkh_-_Autumn_Aurora.jpg" style="width: 316px; height: 316px;"
                         class="card-img-top" alt="Project 2">
                     <div class="card-body">
-                        <h5 class="card-title bg-info text-white text-center">Project 2</h5>
+                        <h5 class="card-title bg-info text-white text-center"><a href="#"
+                                class="card-link text-white">Project 2</h5>
                     </div>
                 </div>
             </div>
@@ -80,7 +84,8 @@
                     <img src="assets\images\art2.jpg" style="width: 316px; height: 316px;" class="card-img-top"
                         alt="Project 3">
                     <div class="card-body">
-                        <h5 class="card-title bg-info text-white text-center">Project 3</h5>
+                        <h5 class="card-title bg-info text-white text-center"><a href="#"
+                                class="card-link text-white">Project 3</h5>
                     </div>
                 </div>
             </div>
@@ -89,7 +94,8 @@
                     <img src="assets\images\art3.jpg" style="width: 316px; height: 316px;" class="card-img-top"
                         alt="Project 4">
                     <div class="card-body">
-                        <h5 class="card-title bg-info text-white text-center">Project 4</h5>
+                        <h5 class="card-title bg-info text-white text-center"><a href="#"
+                                class="card-link text-white">Project 4</h5>
                     </div>
                 </div>
             </div>
@@ -101,10 +107,17 @@
                     <img src="assets\images\drukh2.jpg" style="width: 316px; height: 316px;" class="card-img-top"
                         alt="Project 5">
                     <div class="card-body">
-                        <h5 class="card-title bg-info text-white text-center">Project 5</h5>
+                        <h5 class="card-title bg-info text-white text-center"><a href="#"
+                                class="card-link text-white">Project 5</h5>
                     </div>
                 </div>
             </div>
+
+            <div class="push"></div>
+
+            <footer class="footer">
+                <p>Copyright &copy; 2020 Brandon Bowen</p>
+            </footer>
 
             <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
                 integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
