--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" href="assets\css\style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
@@ -42,11 +44,11 @@
         </nav>
     </header>
 
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
             <div class="col-sm-4">
                 <div class="page-header text-info">
-                    <h1>About Me</h1>
+                    <h2>About Me</h2>
                 </div>
             </div>
             <div class="col-sm-4">
@@ -55,7 +57,7 @@
 
         <div class="row">
             <div class="col-sm-3">
-                <img src="assets\images\WIN_20200128_10_28_16_Pro.jpg" alt="It's-a-me!" class="img-thumbnail">
+                <img src="assets\images\WIN_20200128_10_28_16_Pro.jpg" alt="It's-a-me!" class="img-fluid">
             </div>
             <div class="col-sm-9">
                 <div class="caption">
@@ -78,6 +80,12 @@
             </div>
         </div>
     </div>
+
+    <div class="push"></div>
+
+    <footer class="footer">
+        <p>Copyright &copy; 2020 Brandon Bowen</p>
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
